refactor: now using external class for component name constants - no hard-coded values in `confidentialstorm` library